chore(ci): allow fallback injection of VITE_SUPABASE_* from GH Secrets for Vercel build

--- a/.github/workflows/vercel-deploy.yml
+++ b/.github/workflows/vercel-deploy.yml
@@ -8,6 +8,9 @@ on:
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+  # Optional fallback: if Vercel project envs are not set, use GitHub Secrets
+  VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
+  VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
 
 jobs:
   deploy:
@@ -30,6 +33,17 @@ jobs:
 
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+
+      - name: Fallback env injection for Vite (if not provided by Vercel)
+        run: |
+          echo "Preparing .env.production for Vite build"
+          if [ -n "${VITE_SUPABASE_URL}" ] && [ -n "${VITE_SUPABASE_ANON_KEY}" ]; then
+            echo "VITE_SUPABASE_URL=${VITE_SUPABASE_URL}" >> .env.production
+            echo "VITE_SUPABASE_ANON_KEY=${VITE_SUPABASE_ANON_KEY}" >> .env.production
+            echo "Wrote VITE_* vars to .env.production"
+          else
+            echo "VITE_* secrets not set in GitHub; relying on 'vercel pull' vars."
+          fi
 
       - name: Build Project (Vercel)
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
