chore: enable Supabase Realtime, add NotificationContext, and prep for Vercel deploy (build ok)

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,8 @@
 VITE_SUPABASE_URL=https://SEU-PROJETO.supabase.co
 VITE_SUPABASE_ANON_KEY=SEU_ANON_KEY_AQUI
 
+# Opcional: logs de debug dos canais Realtime no console do navegador
+VITE_DEBUG_REALTIME=false
+
 # Opcional: usado apenas em backend (NÃO utilizar no frontend)
 # SUPABASE_SERVICE_ROLE_KEY=service_role_key_aqui
